<resources>
    <string name="app_name">DecentWork</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">Sign Up</string>
    <string name="title_activity_login">Login to the Decent Work</string>
    <string name="title_activity_registration">Register to the Decent Work</string>
    <string name="hint_email">Email:</string>
    <string name="hint_password">Password:</string>
    <string name="hint_last_name">Last name:</string>
    <string name="hint_profession">Profession:</string>
    <string name="hint_City">City:</string>
    <string name="btn_sign_up">Register</string>
    <string name="btn_link_login">Login</string>
    <string name="btn_assign">Zgłoś się</string>
    <string name="btn_remove_assign">Anuluj zgłoszenie</string>
    <string name="btn_edit">Edytuj zgłoszenie</string>

    <!-- Notice Add strings -->
    <string name="title">Tytuł</string>
    <string name="description">Opis</string>
    <string name="title_hint">Dodaj tytuł(wymagane)</string>
    <string name="description_hint">Dodaj opis</string>
    <string name="city">Miasto</string>
    <string name="add_notice">Dodaj ogłoszenie</string>
    <!-- End strings -->

    <!-- Drawer menu strings -->
    <string name="menu_login">Logowanie</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="menu_user_panel">Mój profil</string>
    <string name="menu_user_notices">Moje ogłoszenia</string>
    <string name="menu_notice_list">Ogłoszenia</string>
    <string name="menu_worker_list">Pracownicy</string>
    <string name="add_notice_menu">Dodaj ogłoszenie</string>
    <!-- End drawer menu strings -->

    <string-array name="notice_list">
        <item>Ogłoszenia</item>
        <item>Pracownicy</item>
    </string-array>

    <!-- Error Strings -->
    <string name="noConn">Brak internetu.</string>
    <string name="noAuth">Brak autoryzacji. Spróbuj zalogować się ponownie.</string>
    <string name="serverError">Coś poszło nie tak. Spróbuj ponownie.</string>
    <string name="wrongJSON">Zły format odpowiedzi. Skontaktuj się z administratorem.</string>
    <string name="wrongData">Wpisane dane nie są poprawne</string>
    <!-- End Error Strings -->

    <!-- notice details hints -->
    <string name="title_input">Tytuł</string>
    <string name="profession_input">Profesja</string>
    <string name="owner_input">Twórca</string>
    <string name="city_input">Miasto</string>
    <string name="description_input">Opis</string>
    <string name="created_input">Stworzone:</string>
    <string name="save_btn">Zapisz zmiany</string>
    <!-- End notice details hints -->

    </resources>
