<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/userPanel"
            android:title="@string/menu_user_panel" />

        <item
            android:id="@+id/userNotices"
            android:title="@string/menu_user_notices" />

        <item
            android:id="@+id/addNotice"
            android:title="@string/add_notice_menu"/>

        <item
            android:id="@+id/noticeList"
            android:title="@string/menu_notice_list" />

        <item
            android:id="@+id/workerList"
            android:title="@string/menu_worker_list" />

        <item
            android:id="@+id/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>