<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.NoticeDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_input"
                android:textSize="12sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/profession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profession_input"
                android:textSize="12sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner_input"
                android:textSize="12sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_input"
                android:textSize="12sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_input"
                android:textSize="12sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created_input"
                android:textSize="12sp" />

            <FrameLayout
                android:id="@+id/assign_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/user_list"
                android:layout_width="match_parent"
                android:layout_height="253dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>