<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="120dp" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="none"
            android:autoText="false"
            android:autofillHints=""
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:ems="10"
            android:inputType="text"
            android:text=""
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="161dp" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="245dp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="272dp" />

        <fragment
            android:id="@+id/fragment2"
            android:name="com.example.teamyuml.decentworkmobile.fragments.StaticData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add_notice_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:text="@string/add_notice"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="357dp" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:text="Anuluj"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="357dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>